Added Readme & started on Gui

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>WeatherStation</title>
+    <script src="scripts.js"></script> 
 </head>
 <body>
     <!-- Title -->
@@ -31,20 +32,32 @@
     <!-- Buttons -->
      <div id="Menu">
         <h1 id="Locations">Locations:</h1>
-        <h2 class="ButtonLabel">Switzerland, Bern</h2>
-        <button class="Button"></button>
-        <h2 class="ButtonLabel">Japan, Tokyo</h2>
-        <button class="Button"></button>
-        <h2 class="ButtonLabel">Australia, Canberra</h2>
-        <button class="Button"></button>
-        <h2 class="ButtonLabel">India, Neu-Delhi</h2>
-        <button class="Button"></button>
-        <h2 class="ButtonLabel">America, New York</h2>
-        <button class="Button"></button>
-        <h2 class="ButtonLabel">Add New</h2>
-        <button id="AddButtonB">
-            <img id="AddButton" src="images/AddSign.svg" alt="A placeholder Image">
-        </button>
+        <div class="ButtonsClass">
+            <h2 class="ButtonLabel">Switzerland, Bern</h2>
+            <button class="Button"></button>
+        </div>
+        <div class="ButtonsClass">
+            <h2 class="ButtonLabel">Japan, Tokyo</h2>
+            <button class="Button"></button>
+        </div>
+        <div class="ButtonsClass">
+            <h2 class="ButtonLabel">Australia, Canberra</h2>
+            <button class="Button"></button>
+        </div>
+        <div class="ButtonsClass">
+            <h2 class="ButtonLabel">India, Neu-Delhi</h2>
+            <button class="Button"></button>
+        </div>
+        <div class="ButtonsClass">
+            <h2 class="ButtonLabel">America, New York</h2>
+            <button class="Button"></button>
+        </div>
+        <div class="ButtonsClass">
+            <h2 class="ButtonLabel">Add New</h2>
+            <button id="AddButtonB">
+                <img id="AddButton" src="images/AddSign.svg" alt="A placeholder Image">
+            </button>
+        </div>
      </div>
 </body>
 </html>
